--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,13 +42,7 @@ header{
     float: right;
   }
   
-  @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-   }
-  }
+ 
     
    body {
     
@@ -171,14 +165,48 @@ input[type=submit]:hover {
   font-size: 20px;
 }
 
- 
-/* #absolute2 p{
-  background: teal;
-  width: 200px;
-  position: absolute;
-  padding: 6px;
-  text-align: center;
-  bottom: 0;
-  color: white;
-  font-size: 20px;
-} */
+
+
+  @media screen and (max-width: 500px) {
+    .header a {
+      float: none;
+      display: block;
+      text-align: center;
+   }
+
+   .header a.active {
+    margin-right: -50px;
+    margin-left: 0px;
+    width: 100%;
+    background-color: teal;
+    color: white;
+    padding: 2%;
+    font-size: 32px;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+  }
+
+  .header a {
+    float: left;
+    color: #777777;
+    text-align: center;
+    padding: 20px;
+    text-decoration: none;
+    font-size: 18px; 
+  }
+
+  img{
+    position: relative;
+    margin-right: 280px;
+    margin-left: 30px;
+    margin-bottom: 7px;
+    height: 350px;
+    width: 350px;
+  }
+
+   body {
+    
+    margin: 0;  /*this section allows the header to fully cover the top */
+ }
+
+
+  }
