--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,11 +168,7 @@ input[type=submit]:hover {
 
 
   @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: center;
-   }
+    
 
    .header a.active {
     margin-right: -50px;
@@ -192,6 +188,7 @@ input[type=submit]:hover {
     padding: 20px;
     text-decoration: none;
     font-size: 18px; 
+    margin-left: 30px;
   }
 
   img{
@@ -203,10 +200,35 @@ input[type=submit]:hover {
     width: 350px;
   }
 
-   body {
-    
-    margin: 0;  /*this section allows the header to fully cover the top */
- }
+  .container{
+    background: white;
+    position: relative;
+    padding: 10px;
+    margin-bottom: 550px;
+    text-align: center;
+    height: 200px;
+  }
+
+  .img1{
+    position: relative;
+    float: left;
+    margin-bottom: 50px;
+    width: 100%;
+  }
+
+  .absolute1 p{
+    background: teal;
+    margin-left: 30px;
+    width: 350px;
+    position: absolute;
+    padding: 14px;
+    text-align: center;
+    bottom: 10;
+    color: white;
+    font-size: 20px;
+  }
+
+  
 
 
   }
