--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,12 +171,11 @@ input[type=submit]:hover {
     
 
    .header a.active {
-    margin-right: -50px;
-    margin-left: 0px;
-    width: 100%;
+    margin: auto;
+    width: 125%;
     background-color: teal;
     color: white;
-    padding: 2%;
+    padding: 5%;
     font-size: 32px;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
   }
@@ -185,7 +184,7 @@ input[type=submit]:hover {
     float: left;
     color: #777777;
     text-align: center;
-    padding: 20px;
+    padding: 14px;
     text-decoration: none;
     font-size: 18px; 
     margin-left: 30px;
@@ -200,11 +199,23 @@ input[type=submit]:hover {
     width: 350px;
   }
 
+  .content {
+    max-width: 960px;
+    margin-left: 25px;
+    margin-right: 20px;
+    margin-top: 25px;
+    margin-bottom: 100px;
+    background: white;
+    padding: 10px;
+    
+    top: 50px;
+  }
+
   .container{
     background: white;
     position: relative;
     padding: 10px;
-    margin-bottom: 550px;
+    margin-bottom: 1800px;
     text-align: center;
     height: 200px;
   }
