--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,12 @@ input[type=submit]:hover {
     margin-left: 30px;
   }
 
+  .header-right {
+    float: right;
+    margin-left: 28px;
+    margin-right: 16px;
+  }
+
   img{
     position: relative;
     margin-right: 280px;
@@ -241,5 +247,87 @@ input[type=submit]:hover {
 
   
 
-
   }
+
+  @media screen and (max-width: 400px) {
+    
+
+    .header a.active {
+     margin: auto;
+     width: 125%;
+     background-color: teal;
+     color: white;
+     padding: 5%;
+     font-size: 32px;
+     font-family: 'Georgia', Times, 'Times New Roman', serif;
+   }
+ 
+   .header a {
+     float: left;
+     color: #777777;
+     text-align: center;
+     padding: 3px;
+     text-decoration: none;
+     font-size: 18px; 
+     margin-left: 28px;
+   }
+ 
+   .header-right {
+     float: right;
+     margin-left: 28px;
+     margin-right: 16px;
+   }
+ 
+   img{
+     position: relative;
+     margin-right: 280px;
+     margin-left: 12px;
+     margin-bottom: 10px;
+     height: 300px;
+     width: 270px;
+   }
+ 
+   .content {
+     max-width: 960px;
+     margin-left: 25px;
+     margin-right: 20px;
+     margin-top: 25px;
+     margin-bottom: 100px;
+     background: white;
+     padding: 10px;
+     
+     top: 50px;
+   }
+ 
+   .container{
+     background: white;
+     position: relative;
+     padding: 10px;
+     margin-bottom: 1800px;
+     text-align: center;
+     height: 200px;
+   }
+ 
+   .img1{
+     position: relative;
+     float: left;
+     margin-bottom: 50px;
+     width: 100%;
+   }
+ 
+   .absolute1 p{
+     background: teal;
+     margin-left: 12px;
+     width: 270px;
+     position: absolute;
+     padding: 12px;
+     text-align: center;
+     bottom: 10;
+     color: white;
+     font-size: 20px;
+   }
+ 
+   
+ 
+ 
+   }
