--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,19 @@ input[type=submit]:hover {
 
 
   @media screen and (max-width: 500px) {
+
+    .footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      padding-top: 16px;
+      width: 100%;
+      background-color: #666666;
+      color: white;
+      text-align: center;
+      border-top: 8px solid #4aaaa5;
+      
+    }
     
 
    .header a.active {
@@ -175,7 +188,7 @@ input[type=submit]:hover {
     width: 125%;
     background-color: teal;
     color: white;
-    padding: 5%;
+    padding: 10px;
     font-size: 32px;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
   }
@@ -245,9 +258,16 @@ input[type=submit]:hover {
     font-size: 20px;
   }
 
-  
+  a .nav-link{
+    color: black;
+}
 
-  }
+.bg-light{
+  background-color: white;
+}
+
+  
+  
 
   @media screen and (max-width: 400px) {
     
@@ -266,7 +286,7 @@ input[type=submit]:hover {
      float: left;
      color: #777777;
      text-align: center;
-     padding: 3px;
+     padding: 0px;
      text-decoration: none;
      font-size: 18px; 
      margin-left: 28px;
